--- a/FoodPiper/MakeReservationView.xib
+++ b/FoodPiper/MakeReservationView.xib
@@ -38,10 +38,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9V4-QW-s3E" customClass="CheckMarkIcon" customModule="FoodPiper" customModuleProvider="target">
-                    <rect key="frame" x="126" y="160" width="68" height="51"/>
+                    <rect key="frame" x="126" y="150" width="60" height="60"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="51" id="ckg-Fm-Ed2"/>
-                        <constraint firstAttribute="width" constant="68" id="kWB-OY-Bu7"/>
+                        <constraint firstAttribute="height" constant="60" id="ckg-Fm-Ed2"/>
+                        <constraint firstAttribute="width" constant="60" id="kWB-OY-Bu7"/>
                     </constraints>
                 </button>
             </subviews>
@@ -50,12 +50,12 @@
                 <constraint firstItem="fCY-8K-y7J" firstAttribute="top" secondItem="Miv-sa-gBe" secondAttribute="bottom" constant="14" id="EbI-uC-yPg"/>
                 <constraint firstItem="Miv-sa-gBe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="47" id="Qt3-Nz-yeM"/>
                 <constraint firstAttribute="trailing" secondItem="fCY-8K-y7J" secondAttribute="trailing" constant="8" id="XYE-kr-sh3"/>
-                <constraint firstItem="9V4-QW-s3E" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Xsx-rf-rmS"/>
+                <constraint firstItem="9V4-QW-s3E" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-4" id="Xsx-rf-rmS"/>
                 <constraint firstAttribute="trailing" secondItem="Miv-sa-gBe" secondAttribute="trailing" constant="47" id="Yy4-La-Pel"/>
                 <constraint firstItem="Cby-Wd-94C" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dYH-ll-Kr0"/>
                 <constraint firstItem="Cby-Wd-94C" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="mOW-TD-94X"/>
                 <constraint firstItem="fCY-8K-y7J" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="n6f-CP-Kuy"/>
-                <constraint firstAttribute="bottom" secondItem="9V4-QW-s3E" secondAttribute="bottom" constant="11" id="vfk-xk-acB"/>
+                <constraint firstAttribute="bottom" secondItem="9V4-QW-s3E" secondAttribute="bottom" constant="12" id="vfk-xk-acB"/>
                 <constraint firstItem="Miv-sa-gBe" firstAttribute="top" secondItem="Cby-Wd-94C" secondAttribute="bottom" constant="14" id="yBT-rh-rPG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
