--- a/FoodPiper/PipeMenuView.xib
+++ b/FoodPiper/PipeMenuView.xib
@@ -336,7 +336,6 @@
                         <constraint firstAttribute="height" constant="45" id="bSn-oN-0Wx"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                     <variation key="default">
                         <mask key="constraints">
@@ -378,7 +377,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.25882352939999997" green="0.73725490199999999" blue="0.38431372549999998" alpha="0.95000000000000007" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="fTz-Na-Thw" secondAttribute="trailing" constant="24" id="2dN-ts-wn3">
                     <variation key="heightClass=regular-widthClass=compact" constant="14"/>
